tests/paczka1/small_fuzzy/22776337.err
Error in line 4: A723 S476 58,8
Error in line 15: clG9sOch3g2 Ap23 55,p
